Qualify that this is an incomplete project

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+***This is a work in progress and is currently non-functional***
+
 ZFS Zpools are a disaster if you accidentally fill them to capacity.  Due to their Copy On Write (COW) nature, a full file system will not only be crippled in performance, but also may not even let you do any real "deletes" to clear up space!  This script provides the means by which you can begin freeing space back up in order to get to a reasonable zpool capacity (~90%), such that normal functions such as rm beging to work again.  
 
 USE THIS SCRIPT AT YOUR OWN RISK
