--- a/README
+++ b/README
@@ -1,9 +1,26 @@
 ***This is a work in progress and is currently non-functional***
 
-ZFS Zpools are a disaster if you accidentally fill them to capacity.  Due to their Copy On Write (COW) nature, a full file system will not only be crippled in performance, but also may not even let you do any real "deletes" to clear up space!  This script provides the means by which you can begin freeing space back up in order to get to a reasonable zpool capacity (~90%), such that normal functions such as rm beging to work again.  
+ZFS Zpools are a disaster if you accidentally fill them to capacity.  
+Due to their Copy On Write (COW) nature, a full file system will not 
+only be crippled in performance, but also may not even let you do any
+real "deletes" to clear up space!  This script provides the means by
+which you can begin freeing space back up in order to get to a 
+reasonable zpool capacity (~90%), such that normal functions such as 
+rm beging to work again.  
 
 USE THIS SCRIPT AT YOUR OWN RISK
 
-Update:  I'm never going to update this to include the actual pieces that destroy data, because it would be irresponsible IMO without engineering a whole piece of software.  I will leave some basic instructions for a DIY.
+Update:  
 
-The script here is nothing more than a basic BASH script that walks through a given path recursively.  Because of the nature of ZFS, you cannot simply add some "rm -f" statements here, you need to actually clobber files by using something like "echo > $FILE_NAME".  
+I'm never going to update this to include the actual pieces that 
+destroy data, because it would be irresponsible IMO without 
+engineering a whole piece of software.  
+
+I will leave some basic instructions for a DIY and posterity.
+
+The script here is nothing more than a basic BASH script that walks 
+through a given path recursively.  Because of the nature of ZFS, 
+you cannot simply add some "rm -f" statements here, you need to 
+actually clobber files by using something like "echo > $FILE_NAME".  
+
+If that doesn't make sense to you, please don't try to do it.  
